--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -175,11 +175,12 @@ span {
 
     .home-content p {
         font-size: 1.5rem;
-        line-height: 1.6;
-        padding: 1.25rem 0;
+        line-height: 1.5;
+        padding: 0;
         text-align: center;
         width: 80%;
         margin: auto;
+        padding-bottom: 1rem;
     }
 
     .button-group {
