--- a/src/Components/Home/Image.css
+++ b/src/Components/Home/Image.css
@@ -49,8 +49,8 @@
         align-items: center;
         justify-content: center;
         margin: auto;
-        margin-top: 70px;
-        margin-bottom: 20px;
+        margin-top: 50px;
+        margin-bottom: 10px;
         margin-left: 25px;
         width: 100%;
         order: 1;
