--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -121,7 +121,7 @@
     .navStyle {
         justify-content: flex-end;
         padding: 1rem;
-        width: 100vw;
+        width: 100%;
         height: auto;
         text-align: center;
     }
@@ -134,7 +134,7 @@
         position: fixed;
         left: 0;
         top: -100vh;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         background: #222;
         width: 100%;
