--- a/src/Components/Timeline/Timeline.css
+++ b/src/Components/Timeline/Timeline.css
@@ -246,6 +246,13 @@
     text-align: left;
   }
 
+  .timeline-card-container.right .timeline-card {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    text-align: justify;
+  }
+  
   .skill-badge {
     display: inline-block;
     background-color: #2774AE;
@@ -276,13 +283,14 @@
     width: 100%;
     padding: 15px;
     text-align: left;
-    left: -13px;
+    left: -8px;
   }
 
   .timeline-card-container.right .timeline-card {
     margin-left: 0;
     margin-right: 0;
     width: 100%;
+    text-align: justify;
   }
 
   .timeline-date-blurb.left,
